deploy/k8s/svc-identity-adapter/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svc-identity-adapter
spec:
  replicas: 2
  selector:
    matchLabels:
      app: svc-identity-adapter
  template:
    metadata:
      labels:
        app: svc-identity-adapter
    spec:
      containers:
        - name: svc-identity-adapter
          image: ghcr.io/uttambhatia/healthcarepatientengagement/svc-identity-adapter:latest
          ports:
            - containerPort: 8090
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8090
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8090
