deploy/k8s/svc-identity-adapter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-identity-adapter
spec:
  selector:
    app: svc-identity-adapter
  ports:
    - port: 80
      targetPort: 8090
